<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFEBEE"
    tools:context="com.musicapp071997.music.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/mainScroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/play"
                    style="@style/barDesign"
                    android:text="@string/play" />

                <TextView
                    android:id="@+id/artist"
                    style="@style/barDesign"
                    android:text="@string/artist" />

                <TextView
                    android:id="@+id/album"
                    style="@style/barDesign"
                    android:text="@string/album" />

                <TextView
                    android:id="@+id/song"
                    style="@style/barDesign"
                    android:text="@string/song" />

                <TextView
                    android:id="@+id/payment"
                    style="@style/barDesign"
                    android:paddingRight="20dp"
                    android:text="@string/payment" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="60dp"
            android:text="Welcome to music app!!"
            android:textSize="48sp" />
    </LinearLayout>
</ScrollView>
